added rights notice, removed Apache license created README.md ready for code review