@@ -1,20 +1,16 @@
-/*
- * Copyright 2019 The MITRE Corporation. All rights reserved.
+/* 
+ * NOTICE
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * This software was produced for the U. S. Government
+ * under Basic Contract No. W56KGU-18-D-0004, and is
+ * subject to the Rights in Noncommercial Computer Software
+ * and Noncommercial Computer Software Documentation
+ * Clause 252.227-7014 (FEB 2012)
+ * 
+ * Copyright 2019 The MITRE Corporation.
  */
-package gov.niem.tools.niemtool;
 
+package gov.niem.tools.niemtool;
 
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
@@ -35,8 +31,10 @@ import org.xml.sax.helpers.DefaultHandler;
 
 /**
  * A SAX handler class for converting NIEM XML to NIEM JSON
- * @author Scott Renner, The MITRE Corporation
+ * @author Scott Renner
+ * <a href="mailto:sar@mitre.org">sar@mitre.org</a>
  */
+
 public class NTXMLHandler extends DefaultHandler {
     
     protected static final Set<String> INTEGER_TYPES = Set.of(
@@ -63,7 +61,7 @@ public class NTXMLHandler extends DefaultHandler {
         model = m;
         data = d;
         context = c;
-        nsbind = m.namespaceBindings().copyOf();
+        nsbind = new NamespaceBindings(m.namespaceBindings());
         uriUsed = new HashSet<>();
         objWithMetadata = new ArrayList<>();
         metadataElement = new HashMap<>();
@@ -313,10 +311,10 @@ public class NTXMLHandler extends DefaultHandler {
             return new JsonPrimitive(new BigDecimal(val));
         } 
         else if ("double".equals(simpleType)) {
-            return new JsonPrimitive(new Double(val));
+            return new JsonPrimitive(Double.valueOf(val));
         } 
         else if ("float".equals(simpleType)) {
-            return new JsonPrimitive(new Float(val));
+            return new JsonPrimitive(Float.valueOf(val));
         } 
         else if (INTEGER_TYPES.contains(simpleType)) {
             return new JsonPrimitive(new BigInteger(val));
